made several edits

--- a/Draft14.bib
+++ b/Draft14.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Ashia Wilson at 2016-10-23 15:57:21 -0700 
+%% Created for Ashia Wilson at 2016-11-08 14:29:22 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{DroriTeboulle13,
+	Author = {Yoel Drori and Marc Teboulle},
+	Date-Added = {2016-11-08 17:38:28 +0000},
+	Date-Modified = {2016-11-08 17:40:46 +0000},
+	Journal = {Math. Program.},
+	Number = {1-2},
+	Pages = {451--482},
+	Title = {Performance of first-order methods for smooth convex minimization: a novel approach},
+	Volume = {145},
+	Year = {2014},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/s10107-013-0653-0}}
 
 @misc{Accel2,
 	Author = {Andre Wibisono and Ashia Wilson},
@@ -39,19 +51,17 @@
 	Title = {Even Faster Accelerated Coordinate Descent Using Non-Uniform Sampling},
 	Year = {2016}}
 
-@article{Acceleration2,
-	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-	Adsurl = {http://adsabs.harvard.edu/abs/2015arXiv150903616W},
+@article{Karimi16,
 	Archiveprefix = {arXiv},
-	Author = {{Wibisono}, Andre and {Wilson}, Ashia~C.},
-	Date-Modified = {2016-10-23 22:57:20 +0000},
+	Author = {Sahar Karimi and Stephen Vavasis},
+	Date-Modified = {2016-11-08 22:27:12 +0000},
 	Eprint = {1509.03616},
-	Journal = {ArXiv e-prints ar{X}iv:1509.03616},
+	Journal = {ArXiv e-prints ar{X}iv:1605.00320v1},
 	Keywords = {Mathematics - Optimization and Control},
-	Month = sep,
-	Primaryclass = {math.OC},
-	Title = {{On Accelerated Methods in Optimization}},
-	Year = 2015}
+	Month = May,
+	Primaryclass = {1605.00320v1},
+	Title = {A unified convergence bound for conjugate gradient and accelerated gradient},
+	Year = 2016}
 
 @misc{Lyapunov,
 	Author = {A. M. Lyapunov and A. T. Fuller},
@@ -91,14 +101,6 @@
 	Volume = {159},
 	Year = {2016},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1007/s10107-015-0949-3}}
-
-@article{DroriTeboulle13,	Author = {Y. Drori and M. Teboulle},
-	Date-Added = {2016-10-18 16:58:55 +0000},
-	Date-Modified = {2016-10-18 16:58:55 +0000},
-	Journal = {Mathematical Programming},
-	Pages = {1-32},
-	Title = {Performance of first-order methods for smooth convex minimization: a novel approach},
-	Year = {2013}}
 
 @book{CLR,
 	Author = {Cormen, Thomas H. and Stein, Clifford and Rivest, Ronald L. and Leiserson, Charles E.},
